adicionado terapeuta sueli e arrumado bugs de css

--- a/autodefesa.html
+++ b/autodefesa.html
@@ -10,13 +10,19 @@
 </head>
 
 <body>
+	<style>
+		.autodefesa, .cursos{
+			background-color: #000;
+			color: #fff;
+		}
+	</style>
 	<header id="inicio" class="topo cursos">
 		<nav class="nav navbar navbar-expand-lg navbar-dark">
-			<a class="navbar-brand" href="#inicio">
+			<a class="navbar-brand" href="./index.html">
 				<img class="menu-logo" src="estilo/imagens/logo-roberto-header.png" alt="logo profissão transformação"
 					height="55" width="180" loading="lazy">
 			</a>
-			<a class="navbar-brand" href="#inicio">Profissão Transformação</a>
+			<a class="navbar-brand" href="./index.html">Profissão Transformação</a>
 			<button class="navbar-toggler justify-content-end" type="button" data-toggle="collapse"
 				data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -24,7 +30,7 @@
 			</button>
 			<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
-					<a class="nav-link" href="#inicio">Página Inicial</a>
+					<a class="nav-link" href="./index.html">Página Inicial</a>
 				</div>
 			</div>
 		</nav>
