--- a/index.html
+++ b/index.html
@@ -75,85 +75,101 @@
             </div>
         </article>
     </section>
-    
+
 
     <section class="container-fluid materiais">
         <div class="container">
             <h2 class="titulo-2">Materiais e cursos</h2>
-        <article class="artigo">
-            <h2>Apostila - Cinco Passos Rumo a transformação</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <img class="artigo-imagem" src="./estilo/imagens/cincopassos.jpeg"
-                        alt="Roberto carequinha escrevendo e brilhando">
-                </div>
-                <div></div>
-                <div class="grid-direita">
-                    <p>Você que é um dos amigos do canal, tem agora uma maneira de ajudar financeiramente o crescimento
-                        do Profissão Transformação.<br />
-                        Está à venda no hotmart, nosso e-book – 5 passos rumo à transformação.<br />
+            <article class="artigo">
+                <h2>Apostila - Cinco Passos Rumo a transformação</h2>
+                <div class="border"></div>
+                <div class="grid">
+                    <div class="grid-esquerda">
+                        <img class="artigo-imagem" src="./estilo/imagens/cincopassos.jpeg"
+                            alt="Roberto carequinha escrevendo e brilhando">
+                    </div>
+                    <div></div>
+                    <div class="grid-direita">
+                        <p>Você que é um dos amigos do canal, tem agora uma maneira de ajudar financeiramente o
+                            crescimento
+                            do Profissão Transformação.<br />
+                            Está à venda no hotmart, nosso e-book – 5 passos rumo à transformação.<br />
 
-                        Por apenas R$ 10,00, você pode ajudar na melhoria do canal.<br />
+                            Por apenas R$ 10,00, você pode ajudar na melhoria do canal.<br />
 
-                        2021 será o ano do movimento, então dê os primeiros passos rumo à sua transformação!</p>
-                    <a href="https://go.hotmart.com/W45457685M"><btn class="btn btn-primary">Compre Agora</btn></a>
+                            2021 será o ano do movimento, então dê os primeiros passos rumo à sua transformação!</p>
+                        <a href="https://go.hotmart.com/W45457685M">
+                            <btn class="btn btn-primary">Compre Agora</btn>
+                        </a>
+                    </div>
                 </div>
-            </div>
-        </article>
-        <article class="artigo">
-            <h2>Curso - Reiki Hermetista</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <p>Reiki Hermetista é uma releitura do sistema Usui Reiki Ryoho, baseada na filosofia hermetista e
-                        trazendo o Reiki para o mundo ocultista. O reikiano hermetista utiliza a manipulação energética
-                        para ativar sigilos, alimentar servidores, criar círculos de proteção, realizar banimentos, além
-                        de...<a href="./ReikiHermetista.html"><btn class="btn btn-primary">Saiba Mais</btn></a></p>
+            </article>
+            <article class="artigo">
+                <h2>Curso - Reiki Hermetista</h2>
+                <div class="border"></div>
+                <div class="grid">
+                    <div class="grid-esquerda">
+                        <p>Reiki Hermetista é uma releitura do sistema Usui Reiki Ryoho, baseada na filosofia hermetista
+                            e
+                            trazendo o Reiki para o mundo ocultista. O reikiano hermetista utiliza a manipulação
+                            energética
+                            para ativar sigilos, alimentar servidores, criar círculos de proteção, realizar banimentos,
+                            além
+                            de...<a href="./ReikiHermetista.html">
+                                <btn class="btn btn-primary">Saiba Mais</btn>
+                            </a></p>
+                    </div>
+                    <div></div>
+                    <div class="grid-direita">
+                        <img class="artigo-imagem" src="./estilo/imagens/WhatsApp-Image-2020-07-22-at-10.05.53-1.jpeg"
+                            alt="Roberto carequinha escrevendo e brilhando">
+                    </div>
                 </div>
-                <div></div>
-                <div class="grid-direita">
-                    <img class="artigo-imagem" src="./estilo/imagens/WhatsApp-Image-2020-07-22-at-10.05.53-1.jpeg"
-                        alt="Roberto carequinha escrevendo e brilhando">
+            </article>
+            <article class="artigo">
+                <h2>Curso - Autodefesa Energética e Espiritual</h2>
+                <div class="border"></div>
+                <div class="grid">
+                    <div class="grid-esquerda">
+                        <img class="artigo-imagem" src="./estilo/imagens/autodefesa.jpeg"
+                            alt="Roberto carequinha escrevendo e brilhando">
+                    </div>
+                    <div></div>
+                    <div class="grid-direita">
+                        <p>Autodefesa energética e espiritual é um curso que te ensina a se proteger e diminuir os
+                            problemas
+                            espirituais que você sofre, ele te auxilia te empoderando e te deixando no controle de suas
+                            defesas, assim você...<a href="./autodefesa.html">
+                                <btn class="btn btn-primary">Saiba Mais</btn>
+                            </a>
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </article>
-        <article class="artigo">
-            <h2>Curso - Autodefesa Energética e Espiritual</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <img class="artigo-imagem" src="./estilo/imagens/autodefesa.jpeg"
-                        alt="Roberto carequinha escrevendo e brilhando">
+            </article>
+            <article class="artigo">
+                <h2>Curso - Cromoterapia</h2>
+                <div class="border"></div>
+                <div class="grid">
+                    <div class="grid-esquerda">
+                        <p>A cromoterapia é um tipo de tratamento que utiliza ondas emitidas pelas cores como o amarelo,
+                            vermelho, azul, verde ou laranja, atuando em células do corpo e melhorando o equilíbrio
+                            entre o
+                            corpo e a mente, sendo que cada cor apresenta uma função terapêutica diferente, com o curso
+                            você
+                            aprenderá....<a href="https://web.whatsapp.com/send?phone=5524981225434">
+                                <btn class="btn btn-primary">Saiba Mais</btn>
+                            </a></p>
+                    </div>
+                    <div></div>
+                    <div class="grid-direita">
+                        <img class="artigo-imagem"
+                            src="./estilo/imagens/significado-das-cores-na-cromoterapia_21124_l.jpeg"
+                            alt="Roberto carequinha escrevendo e brilhando">
+                    </div>
                 </div>
-                <div></div>
-                <div class="grid-direita">
-                    <p>Autodefesa energética e espiritual é um curso que te ensina a se proteger e diminuir os problemas
-                        espirituais que você sofre, ele te auxilia te empoderando e te deixando no controle de suas
-                        defesas, assim você...<a href="./autodefesa.html"><btn class="btn btn-primary">Saiba Mais</btn></a>
-                    </p>
-                </div>
-            </div>
-        </article>
-        <article class="artigo">
-            <h2>Curso - Cromoterapia</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <p>A cromoterapia é um tipo de tratamento que utiliza ondas emitidas pelas cores como o amarelo,
-                        vermelho, azul, verde ou laranja, atuando em células do corpo e melhorando o equilíbrio entre o
-                        corpo e a mente, sendo que cada cor apresenta uma função terapêutica diferente, com o curso você
-                        aprenderá....<a href="https://www.tuasaude.com/beneficios-da-cromoterapia/"><btn class="btn btn-primary">Saiba Mais</btn></a></p>
-                </div>
-                <div></div>
-                <div class="grid-direita">
-                    <img class="artigo-imagem" src="./estilo/imagens/significado-das-cores-na-cromoterapia_21124_l.jpeg"
-                        alt="Roberto carequinha escrevendo e brilhando">
-                </div>
-            </div>
-        </article>
+            </article>
         </div>
-        
+
     </section>
 
     <section class="container-fluid parceiros">
@@ -161,56 +177,80 @@
             <article class="artigo">
                 <h2>ATENDIMENTOS</h2>
                 <div class="border"></div>
-                    <div class="centralizar-roberto centralizar">
-                            <div class="card roberto">
-                                <a href="https://web.whatsapp.com/send?phone=5524981225434">
-                                <img src="./estilo/imagens/Roberto-Mundstein-lenda-das-lendas.png" class="card-img-top"
-                                    alt="Roberto Lenda das Lendas">
-                                    <p>
-                                        Magista<br/>
-                                        Mestre Reiki<br/>
-                                        Cromoterapeuta<br/>
-                                        Numerólogo<br/>
-                                        Conselheiro Energético<br/>
-                                    </p>
-                                <div class="card-body">
-                                    <btn class="btn btn-primary">Marque um atendimento</btn>
-                                </div>
-                                </a>
+                <div class="centralizar-roberto centralizar">
+                    <div class="card roberto">
+                        <a href="https://web.whatsapp.com/send?phone=5524981225434">
+                            <img src="./estilo/imagens/Roberto-Mundstein-lenda-das-lendas.png" class="card-img-top"
+                                alt="Roberto Lenda das Lendas">
+                            <p>
+                                Magista<br />
+                                Mestre Reiki<br />
+                                Cromoterapeuta<br />
+                                Numerólogo<br />
+                                Conselheiro Energético<br />
+                            </p>
+                            <div class="card-body">
+                                <btn class="btn btn-primary">Marque um atendimento</btn>
                             </div>
+                        </a>
                     </div>
+                </div>
                 <div class="separador"></div>
                 <div class="grid centralizar">
                     <div class="grid-esquerda centralizar">
-                            <div class="card parceiro-imagem">
-                                <a href="https://web.whatsapp.com/send?phone=5519995735858">
+                        <div class="card parceiro-imagem">
+                            <a href="https://web.whatsapp.com/send?phone=5519995735858">
                                 <img src="./estilo/imagens/vinicius-fofo.png" class="card-img-top"
                                     alt="Vinicius gatinho.">
-                                    <p>
-                                        Mestre Reiki<br/>
-                                        Iniciado Ogom<br/>
-                                    </p>
+                                <p>
+                                    Mestre Reiki<br />
+                                    Iniciado Ogom<br />
+                                </p>
                                 <div class="card-body">
                                     <btn class="btn btn-primary">Marque um atendimento</btn>
                                 </div>
-                                </a>
-                            </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="separador"></div>
                     <div class="grid-direita centralizar">
-                            <div class="card parceiro-imagem">
-                                <a href="https://web.whatsapp.com/send?phone=5518996145924">
+                        <div class="card parceiro-imagem">
+                            <a href="https://web.whatsapp.com/send?phone=5518996145924">
                                 <img src="./estilo/imagens/alberto-gostoso-terapeuta.png" class="card-img-top"
                                     alt="Alberto delicia">
-                                    <p>
-                                        Magista<br/>
-                                        Terapeuta Reiki<br/>
-                                    </p>
+                                <p>
+                                    Magista<br />
+                                    Terapeuta Reiki<br />
+                                </p>
                                 <div class="card-body">
                                     <btn class="btn btn-primary">Marque um atendimento</btn>
                                 </div>
-                                </a>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="separador"></div>
+                <div class="centralizar-roberto centralizar">
+                    <div class="card roberto">
+                        <a href="https://web.whatsapp.com/send?phone=5524988045824">
+                            <img src="./estilo/imagens/sueli.jpg" class="card-img-top" alt="Sueli">
+                            <p>
+                                Cromoterapia<br/>
+                                Shiatsu<br/>
+                                Massoterapia<br/>
+                                Reflexologia<br/>
+                                Bambuterapia<br/>
+                                Pedras quentes<br/>
+                                Drenagem linfática<br/>
+                                Esfoliação com hidratação<br/>
+                                Moxabustão<br/>
+                                Florais de Bach<br/>
+                                Reiki<br/>
+                            </p>
+                            <div class="card-body">
+                                <btn class="btn btn-primary">Marque um atendimento</btn>
                             </div>
+                        </a>
                     </div>
                 </div>
             </article>
