troca da imagem banner, tenho que pontuar que prefiro imagens clean

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Profissão Transformação</title>
 </head>
 
-<body>
-    <header id="inicio" class="topo">
+<body class="container-fluid">
+    <header id="inicio" class="topo container-fluid">
         <nav class="nav navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#inicio">
                 <img class="menu-logo" src="estilo/imagens/logo-roberto-header.png" alt="logo profissão transformação"
@@ -28,6 +28,7 @@
                 </div>
             </div>
         </nav>
+
     </header>
     <section class="container">
         <article class="artigo">
