como o cliente quer a imagem exatamente como esta eu tive que sumir com o menu quando voce esta vendo o topo

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body class="container-fluid">
     <header id="inicio" class="topo container-fluid">
-        <nav class="nav navbar navbar-expand-lg navbar-dark">
+        <nav class="nav navbar navbar-expand-lg navbar-dark menu-esconder">
             <a class="navbar-brand" href="#inicio">
                 <img class="menu-logo" src="estilo/imagens/logo-roberto-header.png" alt="logo profissão transformação"
-                    height="55" width="180" loading="lazy">
+                    loading="lazy">
             </a>
             <a class="navbar-brand" href="#inicio">Profissão Transformação</a>
             <button class="navbar-toggler justify-content-end" type="button" data-toggle="collapse"
