burlando servidor hostgator p atualizar css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" manifest="cache.appcache">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./import.css">
-    <link rel="stylesheet" href="./estilo.css">
+    <link rel="stylesheet" href="./import-v1.css">
+    <link rel="stylesheet" href="./estilo-v1.css">
     <title>Profissão Transformação</title>
 </head>
 
@@ -189,6 +189,7 @@
                                 Cromoterapeuta<br />
                                 Numerólogo<br />
                                 Conselheiro Energético<br />
+                                Tarot Terapêutico<br/>
                             </p>
                             <div class="card-body">
                                 <btn class="btn btn-primary">Marque um atendimento</btn>
@@ -312,7 +313,7 @@
     <script src="./estilo/js/jquery-3.5.1.min.js"></script>
     <script src="./estilo/js/bootstrap.bundle.min.js"></script>
     <script src="./estilo/js/bootstrap.min.js"></script>
-    <script src="./estilo/js/nav.js"></script>
+    <script src="./estilo/js/nav-v1.js"></script>
 </body>
 
 </html>
