--- a/autodefesa.html
+++ b/autodefesa.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./import.css">
-	<link rel="stylesheet" href="./estilo.css">
+	<link rel="stylesheet" href="./import-v1.css">
+	<link rel="stylesheet" href="./estilo-v1.css">
 	<title>Profissão Transformação</title>
 </head>
 
@@ -100,7 +100,7 @@
 		<script src="./estilo/js/jquery-3.5.1.min.js"></script>
 		<script src="./estilo/js/bootstrap.bundle.min.js"></script>
 		<script src="./estilo/js/bootstrap.min.js"></script>
-		<script src="./estilo/js/nav.js"></script>
+		<script src="./estilo/js/nav-v1.js"></script>
 	</body>
 	
 	</html>
