Arrumado links invertidos

--- a/ReikiHermetista.html
+++ b/ReikiHermetista.html
@@ -77,7 +77,7 @@
 				<div class="border"></div>
 				<div class="grid">
 					<div class="grid-esquerda">
-							<a class="link-sem-estilo" href="https://go.hotmart.com/L45584121N">
+							<a class="link-sem-estilo" href="https://go.hotmart.com/W45970460N">
 								<h3>Conteúdos</h3>
 								<p>
 									<ul>
@@ -135,7 +135,7 @@
 					<div></div>
 					<div class="grid-direita">
 
-						<a class="link-sem-estilo" href="https://go.hotmart.com/N40798394P">
+						<a class="link-sem-estilo" href="https://go.hotmart.com/Q45970456L">
 							<h3>Conteúdos</h3>
 							<p>
 								<ul>
