Criado link e botao para se tornar afiliado

--- a/ReikiHermetista.html
+++ b/ReikiHermetista.html
@@ -164,6 +164,11 @@
 								<btn class="btn btn-primary">COMPRAR O CURSO</btn>
 							</div>
 						</a>
+						<a href="https://s-checkout.builderall.com/affiliates/request-all/FMIp1Ejx1gU352AS">
+							<div class="card-body">
+								<btn class="btn btn-primary">TORNE SE UM AFILIADO</btn>
+							</div>
+						</a>
 
 						<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434">
 							<p>Para informações sobre as turmas abertas ou abertura de novas turmas entre em contato via
