Colocado _blank em todos os links

--- a/ReikiHermetista.html
+++ b/ReikiHermetista.html
@@ -135,7 +135,7 @@
 					<div></div>
 					<div class="grid-direita">
 
-						<a class="link-sem-estilo" href="https://go.hotmart.com/Q45970456L">
+						<a class="link-sem-estilo" href="https://go.hotmart.com/Q45970456L" target="_blank">
 							<h3>Conteúdos</h3>
 							<p>
 								<ul>
@@ -170,7 +170,7 @@
 							</div>
 						</a>
 
-						<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434">
+						<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434" target="_blank">
 							<p>Para informações sobre as turmas abertas ou abertura de novas turmas entre em contato via
 								WhatsApp.</p>
 							<div class="card-body">
@@ -183,7 +183,7 @@
 				<div class="border"></div>
 				<div class="grid">
 					<div class="grid-esquerda">
-							<a class="link-sem-estilo" href="https://go.hotmart.com/S45970451D">
+							<a class="link-sem-estilo" href="https://go.hotmart.com/S45970451D" target="_blank">
 								<h3>Conteúdos</h3>
 								<p>
 									<ul>
@@ -209,7 +209,7 @@
 								</div>
 							</a>
 	
-							<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434">
+							<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434" target="_blank">
 								<p>Para informações sobre as turmas abertas ou abertura de novas turmas entre em contato via
 									WhatsApp.</p>
 								<div class="card-body">
@@ -259,7 +259,7 @@
 							</div>
 						</a>
 
-						<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434">
+						<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434" target="_blank">
 							<p>Para informações sobre as turmas abertas ou abertura de novas turmas entre em contato via
 								WhatsApp.</p>
 							<div class="card-body">
@@ -275,11 +275,11 @@
 				<h2>Nos encontre nas redes sociais</h2>
 				<div class="border"></div>
 				<div class="barra-icone">
-					<a href="https://www.youtube.com/c/RobertoCMundstein"><img class="icone"
+					<a href="https://www.youtube.com/c/RobertoCMundstein" target="_blank"><img class="icone"
 							src="./estilo/imagens/youtube.svg" alt="logo Youtube"></a>
-					<a href="https://www.instagram.com/robertomundstein/"><img class="icone"
+					<a href="https://www.instagram.com/robertomundstein/" target="_blank"><img class="icone"
 							src="./estilo/imagens/instagram.svg" alt="logo instagram"></a>
-					<a href="https://www.facebook.com/robertocarlos.mundstein"><img class="icone"
+					<a href="https://www.facebook.com/robertocarlos.mundstein" target="_blank"><img class="icone"
 							src="./estilo/imagens/facebook.svg" alt="logo facebook"></a>
 				</div>
 		</div>
