Arrumado link nivel 2

--- a/ReikiHermetista.html
+++ b/ReikiHermetista.html
@@ -135,7 +135,7 @@
 					<div></div>
 					<div class="grid-direita">
 
-						<a class="link-sem-estilo" href="https://go.hotmart.com/Q45970456L" target="_blank">
+						<a class="link-sem-estilo" href="https://s-checkout.builderall.com/r/product-version/jeWRSClbEc0NB9s5/F47cyIUdFkrk3ddt" target="_blank">
 							<h3>Conteúdos</h3>
 							<p>
 								<ul>
