Retirando link nvl 3

--- a/ReikiHermetista.html
+++ b/ReikiHermetista.html
@@ -183,7 +183,7 @@
 				<div class="border"></div>
 				<div class="grid">
 					<div class="grid-esquerda">
-							<a class="link-sem-estilo" href="https://go.hotmart.com/S45970451D" target="_blank">
+							<!-- <a class="link-sem-estilo" href="https://go.hotmart.com/S45970451D" target="_blank"> -->
 								<h3>Conteúdos</h3>
 								<p>
 									<ul>
@@ -204,10 +204,10 @@
 										<li>Sétimo símbolo – Mopuer Aba</li>
 									</ul>
 								</p>
-								<div class="card-body">
+								<!-- <div class="card-body">
 									<btn class="btn btn-primary">COMPRAR O CURSO</btn>
 								</div>
-							</a>
+							</a> -->
 	
 							<a class="link-sem-estilo" href="https://web.whatsapp.com/send?phone=5524981225434" target="_blank">
 								<p>Para informações sobre as turmas abertas ou abertura de novas turmas entre em contato via
