Arrumado link de torne-se um afiliado

--- a/ReikiHermetista.html
+++ b/ReikiHermetista.html
@@ -164,7 +164,7 @@
 								<btn class="btn btn-primary">COMPRAR O CURSO</btn>
 							</div>
 						</a>
-						<a  href="https://s-checkout.builderall.com/a/F47cyIUdFkrk3ddt" target="_blank">
+						<a  href="https://s-checkout.builderall.com/affiliates/request-all/FMIp1Ejx1gU352AS" target="_blank">
 							<div class="card-body">
 								<btn class="btn btn-primary">TORNE SE UM AFILIADO</btn>
 							</div>
